syntax = "proto3";

import "google/protobuf/wrappers.proto";

package domain;

message Trash {
    repeated TrashHeadEntry heads = 1;
    repeated TrashFolderEntry folders = 2;
}

message TrashHeadEntry {
    string head_id = 1;
    string name = 2;
    string ModelType = 3;
}

message TrashFolderEntry {
    string folder_id = 1;
    string name = 2;
}

message Folder {
    string id = 1;
    string name = 2;
    repeated FolderLink folders = 3;
    repeated HeadLink heads = 4;
}

message FolderLink {
    string id = 1;
    string name = 2;
}

message HeadLink {
    string id = 1;
    string name = 2;
    ModelType type = 3;
}

message SubmissionPreview {
    string id = 1;
    uint64 started_at = 2;
    uint64 deadline = 3;
    string title = 4;
    bool completed = 5;
    User author = 6;
}

message ProblemSetPreview {
    string id = 1;
    string title = 2;
    uint32 problems_count = 3;
    uint32 duration_s = 4;
    User author = 5;
}

message Head {
    string id = 1;
    string name = 2;
    repeated string tags = 3;
    Commit commit = 4;
}

enum ModelType {
    Problem = 0;
    ProblemSet = 1;
}

message TargetModel {
    string id = 1;
    ModelType type = 2; 
}

message Commit {
    string id = 1;
    string author_id = 2;
    string head_id = 3;
    uint64 timestamp = 4;
    TargetModel target = 5;
    string description = 6;
    string parent_id = 7;
}

message UInt32Interval {
    uint32 start = 1;
    uint32 end = 2;
}

message DateInterval {
    uint64 start = 1;
    uint64 end = 2;
}

message Report {
    string id = 1;
    ProblemSetReport problem_set = 2;
    uint64 started_at = 3;
    uint64 finished_at = 4;
    User author = 5;
}

message ProblemSetReport {
    string generated_problem_set_id = 1;
    string title = 2;
    ProblemReport problems = 3;
}

message ProblemReport {
    message Answer {
        string value = 1;
        uint64 timestamp = 2;
    }

    string generated_problem_id = 1;
    string title = 2;
    GeneratedView view = 3;
    Answer user_answer = 4;
    string expected_answer = 5;
    bool is_correct = 6;
}

message Submission {
    string id = 1;
    SubmissionProblemSet problem_set = 2;
    uint64 started_at = 3;
    uint64 deadline = 4;
    bool completed = 5;
    google.protobuf.StringValue report_id = 6;
    User author = 7;
    repeated ProblemAnswer answers = 8;
}

message SubmissionProblemSet {
    string id = 1;
    string title = 2;
    SubmissionProblem problems = 3;
}

message SubmissionProblem {
    string id = 1;
    string title = 2;
    GeneratedView view = 3;
}

message GeneratedView {
    ViewLanguage language = 1;
    string content = 2;
}

enum ViewLanguage {
    MARKDOWN = 0;
    PLAINTEXT = 1;
    TEX = 2;
}

message ProblemAnswer {
    string id = 1;
    string answer = 2;
    uint64 timestamp = 3;
}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string username = 4;
}
