import { Permissions, Controller, GeneratedProblem, Member, Problem, ProblemSet, TargetModel, Trash, Validator, View, ProtectedItem, Access, Commit, DateInterval, Folder, FolderLink, GeneratedView, Group, GroupAccess, Head, HeadLink, Int32Interval, ProblemAnswer, ProblemReport, ProblemSetPreview, ProblemSetReport, Report, Submission, SubmissionPreview, SubmissionProblem, SubmissionProblemSet, TrashFolderEntry, TrashHeadEntry, UInt32Interval, User } from "../protobuf/domain_pb";

export type ProblemSetModel = ProblemSet.AsObject;
export type GeneratedProblemModel = GeneratedProblem.AsObject;
export type ProblemModel = Problem.AsObject;
export type ValidatorModel = Validator.AsObject;
export type ControllerModel = Controller.AsObject;
export type ViewModel = View.AsObject;
export type PermissionsModel = Permissions.AsObject;
export type ProtectedItemModel = ProtectedItem.AsObject;
export type GroupModel = Group.AsObject;
export type GroupAccessModel = GroupAccess.AsObject;
export type MemberModel = Member.AsObject;
export type AccessModel = Access.AsObject;
export type TrashModel = Trash.AsObject;
export type TrashHeadEntryModel = TrashHeadEntry.AsObject;
export type TrashFolderEntryModel = TrashFolderEntry.AsObject;
export type FolderModel = Folder.AsObject;
export type FolderLinkModel = FolderLink.AsObject;
export type HeadLinkModel = HeadLink.AsObject;
export type SubmissionPreviewModel = SubmissionPreview.AsObject;
export type ProblemSetPreviewModel = ProblemSetPreview.AsObject;
export type HeadModel = Head.AsObject;
export type TargetModelModel = TargetModel.AsObject;
export type CommitModel = Commit.AsObject;
export type UInt32IntervalModel = UInt32Interval.AsObject;
export type Int32IntervalModel = Int32Interval.AsObject;
export type DateIntervalModel = DateInterval.AsObject;
export type ReportModel = Report.AsObject;
export type ProblemSetReportModel = ProblemSetReport.AsObject;
export type ProblemReportModel = ProblemReport.AsObject;
export type SubmissionModel = Submission.AsObject;
export type SubmissionProblemSetModel = SubmissionProblemSet.AsObject;
export type SubmissionProblemModel = SubmissionProblem.AsObject;
export type GeneratedViewModel = GeneratedView.AsObject;
export type ProblemAnswerModel = ProblemAnswer.AsObject;
export type UserModel = User.AsObject;
